<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">ShuttleGo</string>
    <string name="subTittle">Haz tu viaje más fácil</string>
    <string name="close">Cerrar</string>
    <string name="edit">Editar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Eliminar</string>
    <string name="add">Añadir</string>
    <string name="err">ERROR. Vuelva a intentarlo</string>
    <string name="errConexion">ERROR. Fallo en la conexión</string>
    <string name="errServer">ERROR. Fallo en el servidor</string>
    <string name="errDataEmpty">Hay campos vacios</string>
    <string name="errBadFormat">Formato de datos incorrecto</string>
    <string name="signin">Iniciar sesión</string>
    <string name="signup">Registrate</string>
    <string name="forgotPassword">¿Has olvidado tu contraseña?</string>
    <string name="tittleWelcome">Te damos la bienvenida a ShuttleGo</string>
    <string name="introduceEmailRegister">Introduce tu email:</string>
    <string name="introducePasswordRegister">Introduce una constraseña:</string>
    <string name="introduceTypeUserRegister">¿Que tipo de usuario eres?:</string>
    <string name="tittleDataRegister">Algunos datos más y terminamos</string>
    <string name="introduceNameRegister">Introduce tu nombre:</string>
    <string name="introduceSurnameRegister">Introduce tus apellidos:</string>
    <string name="introducePhoneRegister">Introduce un teléfono de contanto:</string>
    <string name="next">Siguiente</string>
    <string name="finish">Finalizar</string>
    <string name="errEmailLoginEmpty">Debes introducir tu email</string>
    <string name="errPasswordLoginEmpty">Debes introducir tu contraseña</string>
    <string name="errDataLoginEmpty">Debes introducir tus credenciales para iniciar sesión</string>
    <string name="errUserDontExist">El usuario no existe</string>
    <string name="errIncorrectSignin">Usuario o contraseña incorrectos</string>
    <string name="errEmailRegisterEmpty">Debes introducir un email</string>
    <string name="errPasswordRegisterEmpty">Debes introducir una contraseña</string>
    <string name="errTypeRegisterEmpty">Debes seleccionar el tipo de pasajero que eres</string>
    <string name="errNameRegisterEmpty">Debes introducir tu nombre</string>
    <string name="errSurnameRegisterEmpty">Debes introducir tus apellidos</string>
    <string name="errPhoneRegisterEmpty">Debes introducir un teléfono</string>
    <string name="errDataRegisterEmpty">Debes introducir los datos para completar el registro</string>
    <string name="errPhoneNumber">Introduce un telefono correcto</string>
    <string name="errUserExisit">El usuario ya existe</string>
    <string name="nav_header_title">ShuttleGo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">shuttlego@shuttlego.com</string>
    <string name="nav_account">Cuenta</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_logout">Cerrar Sesion</string>
    <string name="home">Inicio</string>
    <string name="addOriginAdmin">Añadir origen</string>
    <string name="introduceAddresOrigin">Introduce una dirección para el origen</string>
    <string name="setNameOriginAdmin">Pon un nombre al nuevo origen:</string>
    <string name="errDataOriginEmpty">Debes introducir los datos para crear un origen</string>
    <string name="errNameOriginEmpty">Debes introducir un nombre para el origen</string>
    <string name="errAddressOriginEmpty">Debes introducir una dirección para el origen</string>
    <string name="origin">Origen</string>
    <string name="originCardview">Origen: </string>
    <string name="listOrigins">Orígenes</string>
    <string name="editOrigin">Editar Origen</string>
    <string name="deleteOriginSuccesful">El origen ha sido eliminado correctamente</string>
    <string name="createOriginSuccesful">El origen ha sido creado correctamente</string>
    <string name="editOriginSuccesful">El origen ha sido editado correctamente</string>
    <string name="errOriginAlreadyExists">El origen ya exisite</string>
    <string name="errOriginNotExist">El origen no existe</string>
    <string name="errDestinyNotExisit">El destino no existe</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="phone">Telefono</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="passanger">Pasajero</string>
    <string name="driver">Conductor</string>
    <string name="admin">Administrador</string>
    <string name="access_token">pk.eyJ1Ijoic2h1dHRsZWdvdGZnIiwiYSI6ImNqczNnYTBkejBnN2k0M254bnV4MG5hNXYifQ.NoH-PJACPLpQWZ_2A1vvMg</string>
    <string name="user_location_permission_explanation">La aplicación necesita permisos de geolocalización.</string>
    <string name="user_location_permission_not_granted">No tiene activos los permisos de geolocalización</string>
    <string name="confirmDestiny">Confirmar destino</string>
    <string name="introduceOrigin">Introduce un punto de partida</string>
    <string name="createRoute">Crea un nuevo trayecto</string>
    <string name="addLimitArea">Delimita el area del servicio:</string>
    <string name="addLimitPassenger">¿Cúantos pasajeros puedes llevar?:</string>
    <string name="postalCode">Código Postal</string>
    <string name="numerPassengers">Número de pasajeros</string>
    <string name="createRouteButton">Crear trayecto</string>
    <string name="destinyCardview">Destino: </string>
    <string name="limitCardview">Limite: </string>
    <string name="hourCardview">Hora: </string>
    <string name="nameDriverCardview">Conductor: </string>
    <string name="phoneDriverCardview">Teléfono: </string>
    <string name="limitPassengerCardview">Pasajeros máximos: </string>
    <string name="currentPassengerCardview">Pasajeros actuales: </string>
    <string name="ocupedPlacesCardview">Plazas ocupadas: </string>
    <string name="freePlacesCardview">Plazas libres: </string>
    <string name="route">Ruta</string>
    <string name="routes">Rutas</string>
    <string name="destiny">Destino</string>
    <string name="hour">Hora</string>
    <string name="freePlaces">Plazas libres</string>
    <string name="ocupedPlaces">Plazas ocupadas</string>
    <string name="nameDriver">Conductor</string>
    <string name="phoneDriver">Teléfono</string>
    <string name="limitPassenger">Pasajeros máximos</string>
    <string name="successfullyAdded">Has sido añadido correctamente</string>
    <string name="errSoldOut">No hay plazas disponibles</string>
    <string name="book">Reservar plaza</string>
    <string name="errUserAlreadyAdded">Ya habías reservado</string>
    <string name="errRuteNotFound">No se ha encontrado ninguna ruta</string>
    <string name="introduceDestiny">Introduce un destino</string>
    <string name="searchRoute">Buscar trayecto</string>
    <string name="deleteRouteSuccesful">La ruta ha sido eliminada correctamente</string>
    <string name="passengers">Pasajeros: </string>
    <string name="cancelRoute">Cancelar ruta</string>
    <string name="start">Comenzar</string>
    <string name="NoWaypoints">No hay suficientes puntos.</string>
    <string name="gettingPoints">Obteniendo puntos</string>
    <string name="loadingMap">Cargando mapa</string>
    <string name="calculatingRoute">Calculando ruta</string>
    <string name="addHour">¿A que hora quieres salir?</string>
    <string name="tooFar">Estás demasiado lejos del comienzo</string>
    <string name="cantAccessToLocation">No se puede acceder a su localización.</string>
    <string name="createRouteSucessful">Ruta creada correctamente</string>
    <string name="begin">Comenzar</string>
    <string name="errDataRouteDriverEmpty">Debes introducir los datos necesarios para crear una ruta</string>
    <string name="errOriginDriverEmpty">Debes introducir un origen</string>
    <string name="errLimitDriverEmpty">Debes introducir un area límite</string>
    <string name="errPassengerDriverEmpty">Debes introducir el número de pasajeros máximos</string>
    <string name="errHourDriverEmpty">Debes introducir una hora de salida</string>
    <string name="cancelRouteSuccesful">La ruta ha sido cancelada correctamente</string>
    <string name="errDataRoutePassengerEmpty">Debes introducir los datos necesarios para buscar una ruta</string>
    <string name="errOriginPassengerEmpty">Debes introducir un origen</string>
    <string name="errDestinyPassengerEmpty">Debes introducir un destino</string>
</resources>