<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_degraded">

    <LinearLayout
        style="@style/LinearProgress">

        <ProgressBar
            android:id="@+id/main_register_progress"
            style="@style/ProgressBar"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="70dp">

                <TextView
                    style="@style/TittleWelcome"
                    android:text="@string/tittleWelcome"
                    android:layout_marginHorizontal="20dp"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp"
                android:layout_centerInParent="true"
                tools:ignore="UnusedAttribute">

                <TextView
                    style="@style/TittleEditText"
                    android:text="@string/introduceEmailRegister"
                    android:layout_marginStart="15dp"/>

                <EditText
                    android:id="@+id/main_register_email"
                    android:theme="@style/ThemeData"
                    style="@style/MainEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="10dp"
                    tools:ignore="Autofill" />

                <TextView
                    style="@style/TittleEditText"
                    android:text="@string/introducePasswordRegister"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"/>

                <EditText
                    android:id="@+id/main_register_password"
                    android:theme="@style/ThemeData"
                    style="@style/MainEditText"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    tools:ignore="Autofill" />

                <TextView
                    style="@style/TittleEditText"
                    android:text="@string/introduceTypeUserRegister"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="30dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/main_register_driver_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/driver" />

                    <RadioButton
                        android:id="@+id/main_register_passenger_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/passanger" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="80dp">

                <Button
                    android:id="@+id/main_register_next_btn"
                    android:text="@string/next"
                    android:textColor="@color/colorPrimary"
                    style="@style/ButtonBigRound"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <!-- ************************************************************************************************ -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TittleWelcome"
            android:text="@string/tittleDataRegister"
            android:layout_marginHorizontal="20dp"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp"
            android:layout_marginHorizontal="20dp"
            tools:ignore="UnusedAttribute">

            <TextView
                style="@style/TittleEditText"
                android:text="@string/introduceNameRegister"
                android:layout_marginStart="15dp"/>

            <EditText
                android:id="@+id/main_register_name"
                android:theme="@style/ThemeData"
                style="@style/MainEditText"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:layout_marginTop="10dp"
                tools:ignore="Autofill" />

            <TextView
                style="@style/TittleEditText"
                android:text="@string/introduceSurnameRegister"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/main_register_surname"
                android:theme="@style/ThemeData"
                style="@style/MainEditText"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:layout_marginTop="10dp"
                tools:ignore="Autofill" />

            <TextView
                style="@style/TittleEditText"
                android:text="@string/introducePhoneRegister"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/main_register_phone"
                android:theme="@style/ThemeData"
                style="@style/MainEditText"
                android:hint="@string/phone"
                android:inputType="phone"
                android:layout_marginTop="10dp"
                tools:ignore="Autofill" />
        </LinearLayout>

        <Button
            android:id="@+id/main_register_finish_btn"
            android:layout_marginTop="100dp"
            android:text="@string/finish"
            android:textColor="@color/colorPrimary"
            style="@style/ButtonBigRound"/>
    </LinearLayout>
</LinearLayout>