<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/login_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/tittle_login"
        android:text="@string/app_name"
        style="@style/TittleApp"/>

    <TextView
        android:id="@+id/subtittle_login"
        android:layout_below="@+id/tittle_login"
        android:text="@string/subTittle"
        style="@style/SubTittleApp"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_below="@+id/subtittle_login"
        android:layout_margin="40dp"
        style="@style/VerticalLinear">

        <EditText
            android:id="@+id/email_login"
            android:hint="@string/email"
            style="@style/DataLogin"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password_login"
            android:hint="@string/password"
            style="@style/DataLogin"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_below="@+id/linear1"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="30dp"
        style="@style/VerticalLinear">

        <Button
            android:id="@+id/btn_signin_login"
            style="@style/ButtonLogin"
            android:text="@string/signin" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp">

        <Button
            android:id="@+id/btn_signup_login"
            style="@style/SecondaryButtonLogin"
            android:text="@string/signup" />


    </LinearLayout>
</RelativeLayout>