<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_origin"
            android:icon="@drawable/ic_library_add_black_24dp"
            android:title="@string/addOrigin" />
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_settings_admin"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_signout_admin"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/action_logout" />
        </menu>
    </item>
</menu>
