<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_degraded">

    <LinearLayout
        style="@style/LinearProgress">

        <ProgressBar
            android:id="@+id/origin_edit_progress"
            style="@style/ProgressBar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/origin_edit_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            style="@style/AppBarLayout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/origin_edit_toolbar"
                style="@style/AppBarLayout"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/editOrigin"/>
        </android.support.design.widget.AppBarLayout>


        <TextView
            style="@style/SubTittleDriveMain"
            android:textAlignment="textStart"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/origin"
            android:text="@string/introduceOrigin" />

        <EditText
            android:id="@+id/origin_edit_text"
            style="@style/DataLogin"
            android:hint="@string/origin"
            android:inputType="text"
            android:theme="@style/ThemeData"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>


        <Button
            android:id="@+id/origin_edit_edit_btn"
            style="@style/ButtonDeleteOrigin"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="280dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/edit"/>

        <Button
            android:id="@+id/origin_edit_cancel_btn"
            style="@style/ButtonBigRound"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>