<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_degraded" >

    <LinearLayout
        style="@style/LinearProgress">

        <ProgressBar
            android:id="@+id/main_login_progress"
            style="@style/ProgressBar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_login_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentTop="true">

                <TextView
                    android:id="@+id/tittle_login"
                    android:text="@string/app_name"
                    style="@style/TittleApp"
                    tools:ignore="PrivateResource" />

                <TextView
                    android:id="@+id/subtittle_login"
                    android:layout_below="@+id/tittle_login"
                    android:text="@string/subTittle"
                    style="@style/SubTittleApp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_centerInParent="true">

                <EditText
                    android:id="@+id/main_login_email"
                    android:theme="@style/ThemeData"
                    style="@style/MainEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="45dp"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/main_login_password"
                    android:theme="@style/ThemeData"
                    style="@style/MainEditText"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginTop="45dp"
                    tools:ignore="Autofill,TextFields" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="50dp"
                android:gravity="center">

                <Button
                    android:id="@+id/main_login_signin_btn"
                    style="@style/ButtonRoundWhite"
                    android:text="@string/signin" />

                <Button
                    android:id="@+id/main_login_register_btn"
                    style="@style/SecondaryButtonLogin"
                    android:text="@string/signup" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>