<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_degraded"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        style="@style/LinearProgress">

        <ProgressBar
            android:id="@+id/route_main_progress"
            style="@style/ProgressBar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/route_main_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            style="@style/AppBarLayout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/route_main_toolbar"
                style="@style/AppBarLayout"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/route"/>
        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_arrow_forward_black_"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/route_main_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp"
            android:layout_marginHorizontal="20dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_arrow_back_black"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/route_main_arrive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destiny"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp"
            android:layout_marginHorizontal="20dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_passengers_bus"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/route_main_passengers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limitPassenger"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginHorizontal="20dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_driver"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/route_main_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameDriver"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_phone"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/route_main_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phoneDriver"
                android:textSize="20sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/route_main_delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonDeleteOrigin"
            android:layout_marginTop="120dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/delete"/>

        <Button
            android:id="@+id/route_main_close_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonBigRound"
            android:textColor="@color/colorPrimary"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/close"/>

    </LinearLayout>
</LinearLayout>